sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:10: error: value getCouleur is not a member of Boolean
      if(getCouleur(i) == RED getCouleur(i+1) != RED){
                              ^